--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <header>
         <h1>Titolo</h1>
+        <h2>Sottotitolo</h2>
     </header>
     <script src="./index.js"></script>
 </body>
