Ho aggiunto unua descrizione

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <header>
         <h1>Titolo</h1>
         <h2>Sottotitolo</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis magni, provident impedit culpa aliquid doloribus hic veritatis ipsum possimus consectetur atque ullam nesciunt, officiis placeat sapiente adipisci, nisi quidem eum?</p>
     </header>
     <script src="./index.js"></script>
 </body>
