Ho aggiunto una descrizione in più

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <h1>Titolo</h1>
         <h2>Sottotitolo</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis magni, provident impedit culpa aliquid doloribus hic veritatis ipsum possimus consectetur atque ullam nesciunt, officiis placeat sapiente adipisci, nisi quidem eum?</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem nam rem quis magnam ipsum iusto repellat omnis. A, libero atque veritatis iste distinctio, consequuntur pariatur rem accusamus doloribus cumque ad.</p>
     </header>
     <script src="./index.js"></script>
 </body>
